--- a/.travis.yml
+++ b/.travis.yml
@@ -7,3 +7,5 @@ branches:
   - master
 notifications:
   on_success: never
+script:
+  - xcodebuild -project SourcePreview.xcodeproj -scheme SwiftPreview build
