--- a/.travis.yml
+++ b/.travis.yml
@@ -8,4 +8,4 @@ branches:
 notifications:
   on_success: never
 script:
-  - xcodebuild clean -project SourcePreview.xcodeproj -scheme SwiftPreview build
+  - xcodebuild -quiet clean -project SourcePreview.xcodeproj -scheme SwiftPreview build
