--- a/.travis.yml
+++ b/.travis.yml
@@ -9,4 +9,4 @@ branches:
 notifications:
   on_success: never
 script:
-  - xcodebuild -quiet clean -project SourcePreview.xcodeproj -scheme SwiftPreview build
+  - xcodebuild -quiet clean -project SourcePreview.xcodeproj -scheme SourcePreview build
